Bug 1343663 - Comments are too wide
Set #bugzilla-body to have em based widths so they scale with font size.

--- a/extensions/BugModal/web/bug_modal.css
+++ b/extensions/BugModal/web/bug_modal.css
@@ -812,9 +812,9 @@ h3.change-name {
 /* theme */
 
 #bugzilla-body {
-    max-width: 1200px;
-    min-width: 800px;
-    width: 100%;
+    max-width: 72em;
+    min-width: 60em;
+    width: 60em;
 }
 
 .vcard {
